[gd_scene load_steps=2 format=3 uid="uid://djksydyfiiey8"]

[ext_resource type="Script" path="res://scenes/TerrainEditor/scripts/Terrain.gd" id="1_s1071"]

[node name="Terrain" type="Area2D"]
script = ExtResource("1_s1071")

[node name="Sprite" type="Sprite2D" parent="."]
visible = false
centered = false

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
